Aumentando funciones soft delete y buscarActivo