@@ -2,7 +2,6 @@ package com.uatf.sistema.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -11,26 +10,33 @@ import com.uatf.sistema.exceptions.ResourceNotFoundException;
 import com.uatf.sistema.mapper.DocenteMapper;
 import com.uatf.sistema.model.CargoTipo;
 import com.uatf.sistema.model.Docente;
+import com.uatf.sistema.model.Unidad;
 import com.uatf.sistema.repository.CargoTipoRepository;
 import com.uatf.sistema.repository.DocenteRepository;
+import com.uatf.sistema.repository.UnidadRepository;
 
 @Service
 public class DocenteService {
 
     private final DocenteRepository repo;
     private final CargoTipoRepository cargo_tipo_repo;
+    private final UnidadRepository unidad_repo;
 
-    public DocenteService(DocenteRepository repo, CargoTipoRepository cargo_tipo_repo){
+    public DocenteService(DocenteRepository repo, CargoTipoRepository cargo_tipo_repo, UnidadRepository unidad_repo){
         this.repo = repo;
         this.cargo_tipo_repo = cargo_tipo_repo;
+        this.unidad_repo = unidad_repo;
     }
 
-    public List<DocenteDTO> service_get_all(){
-        return repo.findAll().stream().map(DocenteMapper::toDTO)
-            .collect(Collectors.toList());
+    public List<DocenteDTO> findAll(){
+        return repo.findAll().stream().map(DocenteMapper::toDTO).toList();
     }
 
-    public DocenteDTO service_find_by_UUID(UUID id){
+    public List<DocenteDTO> findAllActive(){
+        return repo.findByEstado(true).stream().map(DocenteMapper::toDTO).toList();
+    }
+
+    public DocenteDTO findOne(UUID id){
 
         Docente docente = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Docente no encontrado"));
@@ -38,19 +44,31 @@ public class DocenteService {
         return DocenteMapper.toDTO(docente);
     }
 
-    public DocenteDTO service_save(DocenteDTO dto){
+    public DocenteDTO findOneActive(UUID id){
+
+        Docente docente = repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Docente no encontrado"));
+        
+        return DocenteMapper.toDTO(docente);
+    }
+
+    public DocenteDTO create(DocenteDTO dto){
     
         Docente docente = DocenteMapper.toEntity(dto);
 
         CargoTipo cargo_tipo = cargo_tipo_repo.findById(dto.getCargo_tipo_id())
             .orElseThrow(() -> new ResourceNotFoundException("CargoTipo no encontrado"));
 
+        Unidad unidad = unidad_repo.findById(dto.getUnidad_id())
+            .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
+
         docente.setCargo_tipo(cargo_tipo);
+        docente.setUnidad(unidad);
 
         return DocenteMapper.toDTO(repo.save(docente));
     }
 
-    public DocenteDTO service_update(UUID id, DocenteDTO dto){
+    public DocenteDTO update(UUID id, DocenteDTO dto){
         
         Docente docente = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Docente no encontrado"));
@@ -58,17 +76,28 @@ public class DocenteService {
         CargoTipo cargoTipo = cargo_tipo_repo.findById(dto.getCargo_tipo_id())
             .orElseThrow(() -> new ResourceNotFoundException("CargoTipo no encontrado"));
         
+        Unidad unidad = unidad_repo.findById(dto.getUnidad_id())
+            .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
+
         docente.setNombre(dto.getNombre());
         docente.setApellidos(dto.getApellidos());
         docente.setObservaciones(dto.getObservaciones());
         docente.setCi(dto.getCi());
-        docente.setEstado(dto.getEstado());
         docente.setCargo_tipo(cargoTipo);
+        docente.setUnidad(unidad);
 
         return DocenteMapper.toDTO(repo.save(docente));
     }
 
-    public void service_delete(UUID id){
+    public void delete(UUID id){
         repo.deleteById(id);
     }
+
+    public void softDelete(UUID id){
+        Docente docente =  repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Docente no encontrado"));
+        docente.setEstado(false);
+        repo.save(docente);
+    }
+
 }
