@@ -2,7 +2,6 @@ package com.uatf.sistema.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -21,12 +20,15 @@ public class GestionService {
         this.repo = repo;
     }
 
-    public List<GestionDTO> service_get_all(){
-        return repo.findAll().stream().map(GestionMapper::toDTO)
-            .collect(Collectors.toList());
+    public List<GestionDTO> findAll(){
+        return repo.findAll().stream().map(GestionMapper::toDTO).toList();
     }
 
-    public GestionDTO service_find_by_UUID(UUID id){
+    public List<GestionDTO> findAllActive(){
+        return repo.findByEstado(true).stream().map(GestionMapper::toDTO).toList();
+    }
+
+    public GestionDTO findOne(UUID id){
 
         Gestion gestion = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Gestion no encontrada"));
@@ -34,14 +36,22 @@ public class GestionService {
         return GestionMapper.toDTO(gestion);
     }
 
-    public GestionDTO service_save(GestionDTO dto){
+    public GestionDTO findOneActive(UUID id){
+
+        Gestion gestion = repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Gestion no encontrada"));
+
+        return GestionMapper.toDTO(gestion);
+    }
+
+    public GestionDTO create(GestionDTO dto){
 
         Gestion gestion = GestionMapper.toEntity(dto);
 
         return GestionMapper.toDTO(repo.save(gestion));
     }
 
-    public GestionDTO service_update(UUID id, GestionDTO dto){
+    public GestionDTO update(UUID id, GestionDTO dto){
 
         Gestion gestion = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Gestion no encontrada"));
@@ -49,9 +59,15 @@ public class GestionService {
         return GestionMapper.toDTO(repo.save(gestion));
     }
 
-    public void service_delete(UUID id){
-
+    public void delete(UUID id){
         repo.deleteById(id);
-        
     }
+
+    public void softDelete(UUID id){
+        Gestion gestion = repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Gestion no encontrada"));
+        gestion.setEstado(false);
+        repo.save(gestion);
+    }
+
 }
