@@ -2,7 +2,6 @@ package com.uatf.sistema.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -21,12 +20,15 @@ public class TipoDocenteService {
         this.repo = repo;
     }
 
-    public List<TipoDocenteDTO> service_get_all(){
-        return repo.findAll().stream().map(TipoDocenteMapper::toDTO)
-            .collect(Collectors.toList());
+    public List<TipoDocenteDTO> findAll(){
+        return repo.findAll().stream().map(TipoDocenteMapper::toDTO).toList();
     }
 
-    public TipoDocenteDTO service_find_by_UUID(UUID id){
+    public List<TipoDocenteDTO> findAllActive(){
+        return repo.findByEstado(true).stream().map(TipoDocenteMapper::toDTO).toList();
+    }
+
+    public TipoDocenteDTO findOne(UUID id){
         
         TipoDocente tipoDocente = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("TipoDocente no encontrado"));
@@ -34,26 +36,40 @@ public class TipoDocenteService {
         return TipoDocenteMapper.toDTO(tipoDocente);
     }
 
-    public TipoDocenteDTO service_save(TipoDocenteDTO dto){
+    public TipoDocenteDTO findOneActive(UUID id){
+        
+        TipoDocente tipoDocente = repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("TipoDocente no encontrado"));
+        
+        return TipoDocenteMapper.toDTO(tipoDocente);
+    }
+
+    public TipoDocenteDTO create(TipoDocenteDTO dto){
 
         TipoDocente tipoDocente = TipoDocenteMapper.toEntity(dto);
 
         return TipoDocenteMapper.toDTO(repo.save(tipoDocente));
     }
 
-    public TipoDocenteDTO service_update(UUID id, TipoDocenteDTO dto){
+    public TipoDocenteDTO update(UUID id, TipoDocenteDTO dto){
 
         TipoDocente tipoDocente = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("TipoDocente no encontrado"));
 
         tipoDocente.setTipo(dto.getTipo());
         tipoDocente.setDescripcion(dto.getDescripcion());
-        tipoDocente.setEstado(dto.getEstado());
 
         return TipoDocenteMapper.toDTO(repo.save(tipoDocente));
     }
 
-    public void service_delete(UUID id){
+    public void delete(UUID id){
         repo.deleteById(id);
+    }
+
+    public void softDelete(UUID id){
+        TipoDocente tipoDocente = repo.findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException("TipoDocente no encontrado"));
+        tipoDocente.setEstado(false);
+        repo.save(tipoDocente);
     }
 }
