@@ -2,7 +2,6 @@ package com.uatf.sistema.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -25,27 +24,34 @@ public class UnidadService {
         this.tipo_unidad_repo = tipo_unidad_repo;
     }
     
-    public List<UnidadDTO> service_get_all(){
-        return repo.findAll().stream().map(UnidadMapper::toDTO)
-            .collect(Collectors.toList());
+    public List<UnidadDTO> findAll(){
+        return repo.findAll().stream().map(UnidadMapper::toDTO).toList();
     }
 
-    public UnidadDTO service_find_by_UUID(UUID id){
-        
+    public List<UnidadDTO> findAllActive(){
+        return repo.findByEstado(true).stream().map(UnidadMapper::toDTO).toList();
+    }
+
+    public UnidadDTO findOne(UUID id){
         Unidad unidad = repo.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
         return UnidadMapper.toDTO(unidad);
-
     }
 
-    public UnidadDTO service_save(UnidadDTO dto){
+    public UnidadDTO findOneActive(UUID id){
+        Unidad unidad = repo.findByIdAndEstadoTrue(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
+        return UnidadMapper.toDTO(unidad);
+    }
 
+    public UnidadDTO create(UnidadDTO dto){
         Unidad unidad =  UnidadMapper.toEntity(dto);
-
         Unidad dependiente = null;
 
-        if(dto.getUnidad_id() != null){
-            dependiente = repo.findById(dto.getUnidad_id())
+        if(dto.getDependiente_id() != null){
+            System.out.println("xaskjdasdsakjndjasndjkasndjkasndjkabdhadbjsakdbahjsdbasjkbdkajhbshdbjdbasjdbajshbdasjhdbasjkdbd");
+            System.out.println(dto.getDependiente_id());
+            dependiente = repo.findById(dto.getDependiente_id())
             .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
         }
 
@@ -58,15 +64,15 @@ public class UnidadService {
         return UnidadMapper.toDTO(repo.save(unidad));
     }
  
-    public UnidadDTO service_update(UUID id, UnidadDTO dto){
+    public UnidadDTO update(UUID id, UnidadDTO dto){
 
         Unidad unidad = repo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
 
         Unidad dependiente = null;
 
-        if(dto.getUnidad_id() != null){
-            dependiente = repo.findById(id)
+        if(dto.getDependiente_id() != null){
+            dependiente = repo.findById(dto.getDependiente_id())
                 .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
         }
 
@@ -78,12 +84,18 @@ public class UnidadService {
         unidad.setSigla(dto.getSigla());
         unidad.setUnidad(dependiente);
         unidad.setTipo_unidad(tipoUnidad);
-        unidad.setEstado(dto.getEstado());
 
         return UnidadMapper.toDTO(repo.save(unidad));
     }
 
-    public void service_delete(UUID id){
+    public void delete(UUID id){
         repo.deleteById(id);
+    }
+
+    public void softDelete(UUID id){
+        Unidad unidad = repo.findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Unidad no encontrada"));
+        unidad.setEstado(false);
+        repo.save(unidad);
     }
 }
